cards alignment fixed

--- a/src/styles/blocks/_catalog.scss
+++ b/src/styles/blocks/_catalog.scss
@@ -1,18 +1,19 @@
 .catalog {
   display: flex;
   flex-wrap: wrap;
+  min-width: getMaxWidth($cardWidth, $cardSideGaps, $catalogSidePaddings);
   max-width: getMaxWidth($cardWidth, $cardSideGaps, $catalogSidePaddings);
 
   &__product {
     margin-right: $cardSideGaps;
-    margin-top: 46px;
+    margin-bottom: 46px;
 
     &:nth-child(4n) {
       margin-right: 0;
     }
 
-    &:nth-child(-n + 4) {
-      margin-top: 50px;
+    &:nth-last-child(-n + 4) {
+      margin-bottom: 0;
     }
   }
 }
