--- a/src/styles/blocks/_main.scss
+++ b/src/styles/blocks/_main.scss
@@ -2,6 +2,6 @@
 
   &__catalog {
     margin: 0 auto;
-    padding: 0 $catalogSidePaddings;
+    padding: 50px $catalogSidePaddings 72px;
   }
 }
